--- a/src/virt-manager.glade
+++ b/src/virt-manager.glade
@@ -8978,7 +8978,7 @@ TB</property>
 				  <child>
 				    <widget class="GtkLabel" id="label311">
 				      <property name="visible">True</property>
-				      <property name="label" translatable="yes">&lt;b&gt;Virtaulization method:&lt;/b&gt;</property>
+				      <property name="label" translatable="yes">&lt;b&gt;Virtualization method:&lt;/b&gt;</property>
 				      <property name="use_underline">False</property>
 				      <property name="use_markup">True</property>
 				      <property name="justify">GTK_JUSTIFY_LEFT</property>
