Make the upper limit on disk file size reasonable

--- a/src/vmm-create.glade
+++ b/src/vmm-create.glade
@@ -2790,7 +2790,7 @@ mipsel</property>
 				      <property name="update_policy">GTK_UPDATE_ALWAYS</property>
 				      <property name="snap_to_ticks">True</property>
 				      <property name="wrap">False</property>
-				      <property name="adjustment">500 0 16000 100 500 500</property>
+				      <property name="adjustment">500 0 4000000 100 500 500</property>
 				      <signal name="changed" handler="on_storage_file_size_changed" last_modification_time="Thu, 10 Aug 2006 19:19:04 GMT"/>
 				    </widget>
 				  </child>
