Added support for forwarding options

--- a/src/vmm-create-net.glade
+++ b/src/vmm-create-net.glade
@@ -1742,7 +1742,7 @@
 				  <child>
 				    <widget class="GtkLabel" id="label392">
 				      <property name="visible">True</property>
-				      <property name="label" translatable="yes">Via device:</property>
+				      <property name="label" translatable="yes">Desination:</property>
 				      <property name="use_underline">False</property>
 				      <property name="use_markup">False</property>
 				      <property name="justify">GTK_JUSTIFY_LEFT</property>
